Text alignment fix

--- a/src/components/sections/Contact/Contact.scss
+++ b/src/components/sections/Contact/Contact.scss
@@ -13,6 +13,7 @@
   margin-bottom: 10vh;
   color: white;
   text-wrap: balance;
+  text-align: center;
 }
 
 .contact-heading {
